--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,9 @@
         <div class="button-column-left">
             <div id="openModal" class="button"><i class="fa-solid fa-address-card" style="color: #000000;"></i> Incluir jogador</div>
             <div id="openRemovePlayerModal" class="button"><i class="fa-solid fa-user-slash" style="color: #000000;"></i> Remover jogador</div>
-            <div class="button" id="roll-button"><i class="fa-solid fa-dice" style="color: #000000;"></i> Executar rodada</div>
+            <div class="button hidden" id="roll-button"><i class="fa-solid fa-dice" style="color: #000000;"></i> Executar rodada</div>
+            <div class="button" id="start-button"><i class="fa-solid fa-play" style="color: #000000;"></i> Iniciar Campeonato</div>
+            <div class="button hidden" id="mostrarTabela"><i class="fa-solid fa-table-list" style="color: #000000;"></i> Cartela de resultados</div>
         </div>
         <div class="scene">
             <div class="cube">
@@ -62,9 +64,6 @@
             </div>
         </div>
         <div class="button-column-right">
-            <div class="button" id="mostrarTabela"><i class="fa-solid fa-table-list" style="color: #000000;"></i> Cartela de resultados</div>
-            <div class="button"><i class="fa-solid fa-feather" style="color: #000000;"></i> Gravar os dados</div>
-            <div class="button"><i class="fa-solid fa-book-open-reader" style="color: #000000;"></i> Ler os dados</div>
             <div id="fecharAplicacao" class="button last-button"><i class="fa-solid fa-door-open" style="color: #000000;"></i> Sair da aplicação</div>
         </div>
     </div>
@@ -107,7 +106,7 @@
         </div>
     </div>
     <div id="tabelaContainer" class="transition-fade-out" style="display:none; width: 70%; margin-top:-15%;">
-            <div id="tabelaCabecalho" style="overflow: hidden;">
+            <div id="tabelaCabecalho" style="overflow: hidden; color:black">
                 <table style="max-width:100%;">
                     <thead>
                     <tr>
@@ -164,6 +163,25 @@
                     </tbody>
                 </table>
             </div>
+    </div>
+    <div class="container-escolhas hidden">
+        <div class="button hidden" id="mostrar-jogadas-executadas"><i class="fa-solid fa-table-list" style="color: #000000;"></i>Jogadas Executadas</div>
+        <div class="tabela-escolhas">
+            <h5 style="color:black"><b>Escolha sua jogada:</b></h5>
+            <div id="escolha-numero-1" class="escolha-numero">1</div>
+            <div id="escolha-numero-2" class="escolha-numero">2</div>
+            <div id="escolha-numero-3" class="escolha-numero">3</div>
+            <div id="escolha-numero-4" class="escolha-numero">4</div>
+            <div id="escolha-numero-5" class="escolha-numero">5</div>
+            <div id="escolha-numero-6" class="escolha-numero">6</div>
+            <div id="escolha-numero-T" class="escolha-numero">T</div>
+            <div id="escolha-numero-Q" class="escolha-numero">Q</div>
+            <div id="escolha-numero-F" class="escolha-numero">F</div>
+            <div id="escolha-numero-S+" class="escolha-numero"S+</div>
+            <div id="escolha-numero-S-" class="escolha-numero">S-</div>
+            <div id="escolha-numero-G" class="escolha-numero">G</div>
+            <div id="escolha-numero-X" class="escolha-numero">X</div>
+        </div>
     </div>
     <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
