Implementado tabela de resultados

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -105,6 +105,70 @@
             </div>
         </div>
     </div>
+    <div class="modal" id="modal-escolhas">
+        <div class="modal-escolhas-content">
+            <span class="close" id="closeModalBtn">&times;</span>
+            <h2>Escolhas realizadas</h2>
+            <form>
+                <div class="row">
+                    <div class="column">
+                        <label for="escolha1">Escolha 1:</label>
+                        <input readonly type="text" id="escolha1" name="escolha1">
+                    </div>
+                    <div class="column">
+                        <label for="escolha2">Escolha 2:</label>
+                        <input readonly type="text" id="escolha2" name="escolha2">
+                    </div>
+                    <div class="column">
+                        <label for="escolha3">Escolha 3:</label>
+                        <input readonly type="text" id="escolha3" name="escolha3">
+                    </div>
+                    <div class="column">
+                        <label for="escolha4">Escolha 4:</label>
+                        <input readonly type="text" id="escolha4" name="escolha4">
+                    </div>
+                    <div class="column">
+                        <label for="escolha5">Escolha 5:</label>
+                        <input readonly type="text" id="escolha5" name="escolha5">
+                    </div>
+                    <div class="column">
+                        <label for="escolha6">Escolha 6:</label>
+                        <input readonly type="text" id="escolha6" name="escolha6">
+                    </div>
+                    <div class="column">
+                        <label for="escolha7">Escolha T:</label>
+                        <input readonly type="text" id="escolha7" name="escolha7">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column">
+                        <label for="escolha8">Escolha Q:</label>
+                        <input readonly type="text" id="escolha8" name="escolha8">
+                    </div>
+                    <div class="column">
+                        <label for="escolha9">Escolha F:</label>
+                        <input readonly type="text" id="escolha9" name="escolha9">
+                    </div>
+                    <div class="column">
+                        <label for="escolha10">Escolha S:</label>
+                        <input readonly type="text" id="escolha10" name="escolha10">
+                    </div>
+                    <div class="column">
+                        <label for="escolha11">Escolha S:</label>
+                        <input readonly type="text" id="escolha11" name="escolha11">
+                    </div>
+                    <div class="column">
+                        <label for="escolha12">Escolha G:</label>
+                        <input readonly type="text" id="escolha12" name="escolha12">
+                    </div>
+                    <div class="column">
+                        <label for="escolha13">Escolha X:</label>
+                        <input readonly type="text" id="escolha13" name="escolha13">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
     <div id="tabelaContainer" class="transition-fade-out" style="display:none; width: 70%; margin-top:-15%;">
             <div id="tabelaCabecalho" style="overflow: hidden; color:black">
                 <table style="max-width:100%;">
@@ -165,7 +229,7 @@
             </div>
     </div>
     <div class="container-escolhas hidden">
-        <div class="button hidden" id="mostrar-jogadas-executadas"><i class="fa-solid fa-table-list" style="color: #000000;"></i>Jogadas Executadas</div>
+        <div class="button hidden" id="mostrar-jogadas-executadas"><i class="fa-regular fa-eye" style="color: #000000;"></i></i>Jogadas Executadas</div>
         <div class="tabela-escolhas">
             <h5 style="color:black"><b>Escolha sua jogada:</b></h5>
             <div id="escolha-numero-1" class="escolha-numero">1</div>
@@ -174,13 +238,13 @@
             <div id="escolha-numero-4" class="escolha-numero">4</div>
             <div id="escolha-numero-5" class="escolha-numero">5</div>
             <div id="escolha-numero-6" class="escolha-numero">6</div>
-            <div id="escolha-numero-T" class="escolha-numero">T</div>
-            <div id="escolha-numero-Q" class="escolha-numero">Q</div>
-            <div id="escolha-numero-F" class="escolha-numero">F</div>
-            <div id="escolha-numero-S+" class="escolha-numero"S+</div>
-            <div id="escolha-numero-S-" class="escolha-numero">S-</div>
-            <div id="escolha-numero-G" class="escolha-numero">G</div>
-            <div id="escolha-numero-X" class="escolha-numero">X</div>
+            <div id="escolha-numero-7" class="escolha-numero">T</div>
+            <div id="escolha-numero-8" class="escolha-numero">Q</div>
+            <div id="escolha-numero-9" class="escolha-numero">F</div>
+            <div id="escolha-numero-10" class="escolha-numero">S+</div>
+            <div id="escolha-numero-11" class="escolha-numero">S-</div>
+            <div id="escolha-numero-12" class="escolha-numero">G</div>
+            <div id="escolha-numero-13" class="escolha-numero">X</div>
         </div>
     </div>
     <script src="index.js"></script>
