Finalizada implementação e documentação

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,7 +72,7 @@
             <div class="modal-title">
                 <i class="fa-solid fa-user-plus" style="color: #000000;"></i> Cadastro
             </div>
-            <input id="nome-jogador" class="modal-input" type="text" placeholder="Nome">
+            <input id="nome-jogador" class="modal-input-cadastrar" type="text" placeholder="Nome">
             <select class="modal-input" id="tipo-jogador">
                 <option value="M">Máquina</option>
                 <option value="H">Humano</option>
@@ -182,46 +182,46 @@
             <div id="tabelaCorpo" style="overflow-y: auto; max-height: calc(70% - 40px);">
                 <table class="table table-bordered" style="max-width:100%;">
                     <tbody id="table-body">
-                    <tr>
+                    <tr class="tr" id="tr-0">
                         <td class="col-lg-1"><b>1</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-1">
                         <td class="col-lg-1"><b>2</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-2">
                         <td class="col-lg-1"><b>3</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-3">
                         <td class="col-lg-1"><b>4</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-4">
                         <td class="col-lg-1"><b>5</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-5">
                         <td class="col-lg-1"><b>6</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-6">
                         <td class="col-lg-1"><b>T</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-7">
                         <td class="col-lg-1"><b>Q</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-8">
                         <td class="col-lg-1"><b>F</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-9">
                         <td class="col-lg-1"><b>S+</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-10">
                         <td class="col-lg-1"><b>S-</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-11">
                         <td class="col-lg-1"><b>G</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-12">
                         <td class="col-lg-1"><b>X</b></td>
                     </tr>
-                    <tr>
+                    <tr class="tr" id="tr-13">
                         <td class="col-lg-1"><b>Total</b></td>
                     </tr>
                     </tbody>
