--- a/README.html
+++ b/README.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Executando um Projeto Spring com o Maven</title>
+</head>
+<body>
 <h1>Executando um Projeto Spring com o Maven</h1>
 
 <h2>Pré-requisitos</h2>
@@ -49,3 +55,5 @@
         <li>Ou no botão vermelho do IntelliJ IDEA.</li>
     </ul>
 </ol>
+</body>
+</html>
