Iniciado implementação segunda atividade POO

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jogo General</title>
+    <title>PO24CP</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,240 +12,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 <body>
-    <div class="top-logo"></div>
-    <div class="button-container">
-        <div class="button-column-left">
-            <div id="openModal" class="button"><i class="fa-solid fa-address-card" style="color: #000000;"></i> Incluir jogador</div>
-            <div id="openRemovePlayerModal" class="button"><i class="fa-solid fa-user-slash" style="color: #000000;"></i> Remover jogador</div>
-            <div class="button hidden" id="roll-button"><i class="fa-solid fa-dice" style="color: #000000;"></i> Executar rodada</div>
-            <div class="button" id="start-button"><i class="fa-solid fa-play" style="color: #000000;"></i> Iniciar Campeonato</div>
-            <div class="button hidden" id="mostrarTabela"><i class="fa-solid fa-table-list" style="color: #000000;"></i> Cartela de resultados</div>
-        </div>
-        <div class="scene">
-            <div class="cube">
-                <div class="face front">1</div>
-                <div class="face back">2</div>
-                <div class="face right">3</div>
-                <div class="face left">4</div>
-                <div class="face top">5</div>
-                <div class="face bottom">6</div>
-            </div>
-            <div class="cube">
-                <div class="face front">1</div>
-                <div class="face back">2</div>
-                <div class="face right">3</div>
-                <div class="face left">4</div>
-                <div class="face top">5</div>
-                <div class="face bottom">6</div>
-            </div>
-            <div class="cube">
-                <div class="face front">1</div>
-                <div class="face back">2</div>
-                <div class="face right">3</div>
-                <div class="face left">4</div>
-                <div class="face top">5</div>
-                <div class="face bottom">6</div>
-            </div>
-            <div class="cube">
-                <div class="face front">1</div>
-                <div class="face back">2</div>
-                <div class="face right">3</div>
-                <div class="face left">4</div>
-                <div class="face top">5</div>
-                <div class="face bottom">6</div>
-            </div>
-            <div class="cube">
-                <div class="face front">1</div>
-                <div class="face back">2</div>
-                <div class="face right">3</div>
-                <div class="face left">4</div>
-                <div class="face top">5</div>
-                <div class="face bottom">6</div>
-            </div>
-        </div>
-        <div class="button-column-right">
-            <div id="fecharAplicacao" class="button last-button"><i class="fa-solid fa-door-open" style="color: #000000;"></i> Sair da aplicação</div>
-        </div>
-    </div>
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-title">
-                <i class="fa-solid fa-user-plus" style="color: #000000;"></i> Cadastro
-            </div>
-            <input id="nome-jogador" class="modal-input-cadastrar" type="text" placeholder="Nome">
-            <select class="modal-input" id="tipo-jogador">
-                <option value="M">Máquina</option>
-                <option value="H">Humano</option>
-            </select>
-            <div class="modal-buttons">
-                <button class="modal-button modal-button-cancel">
-                    <i class="fas fa-times"></i> Cancelar
-                </button>
-                <button class="modal-button modal-button-confirm">
-                    <i class="fas fa-check"></i> Confirmar
-                </button>
-            </div>
-        </div>
-    </div>
-    <div id="removePlayerModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-title">
-                <i class="fa-solid fa-user-slash" style="color: #000000;"></i> Remover Jogador
-            </div>
-            <select class="modal-input" id="playerSelect">
-              <!-- Opções de jogadores são adicionadas pelo javascript -->
-            </select>
-            <div class="modal-buttons">
-                <button class="modal-button modal-button-cancel-remove">
-                    <i class="fas fa-times"></i> Cancelar
-                </button>
-                <button class="modal-button modal-button-confirm-remove">
-                    <i class="fas fa-trash"></i> Remover
-                </button>
-            </div>
-        </div>
-    </div>
-    <div class="modal" id="modal-escolhas">
-        <div class="modal-escolhas-content">
-            <span class="close" id="closeModalBtn">&times;</span>
-            <h2>Escolhas realizadas</h2>
-            <form>
-                <div class="row">
-                    <div class="column">
-                        <label for="escolha1">Escolha 1:</label>
-                        <input readonly type="text" id="escolha1" name="escolha1">
-                    </div>
-                    <div class="column">
-                        <label for="escolha2">Escolha 2:</label>
-                        <input readonly type="text" id="escolha2" name="escolha2">
-                    </div>
-                    <div class="column">
-                        <label for="escolha3">Escolha 3:</label>
-                        <input readonly type="text" id="escolha3" name="escolha3">
-                    </div>
-                    <div class="column">
-                        <label for="escolha4">Escolha 4:</label>
-                        <input readonly type="text" id="escolha4" name="escolha4">
-                    </div>
-                    <div class="column">
-                        <label for="escolha5">Escolha 5:</label>
-                        <input readonly type="text" id="escolha5" name="escolha5">
-                    </div>
-                    <div class="column">
-                        <label for="escolha6">Escolha 6:</label>
-                        <input readonly type="text" id="escolha6" name="escolha6">
-                    </div>
-                    <div class="column">
-                        <label for="escolha7">Escolha T:</label>
-                        <input readonly type="text" id="escolha7" name="escolha7">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <label for="escolha8">Escolha Q:</label>
-                        <input readonly type="text" id="escolha8" name="escolha8">
-                    </div>
-                    <div class="column">
-                        <label for="escolha9">Escolha F:</label>
-                        <input readonly type="text" id="escolha9" name="escolha9">
-                    </div>
-                    <div class="column">
-                        <label for="escolha10">Escolha S:</label>
-                        <input readonly type="text" id="escolha10" name="escolha10">
-                    </div>
-                    <div class="column">
-                        <label for="escolha11">Escolha S:</label>
-                        <input readonly type="text" id="escolha11" name="escolha11">
-                    </div>
-                    <div class="column">
-                        <label for="escolha12">Escolha G:</label>
-                        <input readonly type="text" id="escolha12" name="escolha12">
-                    </div>
-                    <div class="column">
-                        <label for="escolha13">Escolha X:</label>
-                        <input readonly type="text" id="escolha13" name="escolha13">
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div id="tabelaContainer" class="transition-fade-out" style="display:none; width: 70%; margin-top:-15%;">
-            <div id="tabelaCabecalho" style="overflow: hidden; color:black">
-                <table style="max-width:100%;">
-                    <thead>
-                    <tr>
-                        <th class="col-lg-1"><b>#</b></th>
-                    </tr>
-                    </thead>
-                </table>
-            </div>
-            <div id="tabelaCorpo" style="overflow-y: auto; max-height: calc(70% - 40px);">
-                <table class="table table-bordered" style="max-width:100%;">
-                    <tbody id="table-body">
-                    <tr class="tr" id="tr-0">
-                        <td class="col-lg-1"><b>1</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-1">
-                        <td class="col-lg-1"><b>2</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-2">
-                        <td class="col-lg-1"><b>3</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-3">
-                        <td class="col-lg-1"><b>4</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-4">
-                        <td class="col-lg-1"><b>5</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-5">
-                        <td class="col-lg-1"><b>6</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-6">
-                        <td class="col-lg-1"><b>T</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-7">
-                        <td class="col-lg-1"><b>Q</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-8">
-                        <td class="col-lg-1"><b>F</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-9">
-                        <td class="col-lg-1"><b>S+</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-10">
-                        <td class="col-lg-1"><b>S-</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-11">
-                        <td class="col-lg-1"><b>G</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-12">
-                        <td class="col-lg-1"><b>X</b></td>
-                    </tr>
-                    <tr class="tr" id="tr-13">
-                        <td class="col-lg-1"><b>Total</b></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-    </div>
-    <div class="container-escolhas hidden">
-        <div class="button hidden" id="mostrar-jogadas-executadas"><i class="fa-regular fa-eye" style="color: #000000;"></i></i>Jogadas Executadas</div>
-        <div class="tabela-escolhas">
-            <h5 style="color:black"><b>Escolha sua jogada:</b></h5>
-            <div id="escolha-numero-1" class="escolha-numero">1</div>
-            <div id="escolha-numero-2" class="escolha-numero">2</div>
-            <div id="escolha-numero-3" class="escolha-numero">3</div>
-            <div id="escolha-numero-4" class="escolha-numero">4</div>
-            <div id="escolha-numero-5" class="escolha-numero">5</div>
-            <div id="escolha-numero-6" class="escolha-numero">6</div>
-            <div id="escolha-numero-7" class="escolha-numero">T</div>
-            <div id="escolha-numero-8" class="escolha-numero">Q</div>
-            <div id="escolha-numero-9" class="escolha-numero">F</div>
-            <div id="escolha-numero-10" class="escolha-numero">S+</div>
-            <div id="escolha-numero-11" class="escolha-numero">S-</div>
-            <div id="escolha-numero-12" class="escolha-numero">G</div>
-            <div id="escolha-numero-13" class="escolha-numero">X</div>
-        </div>
+    <h1>Escolha Seu Jogo!</h1>
+    <div id="botoes">
+        <a href="pagina1.html"><button class="botao">Jogo de Azar</button></a>
+        <a href="jogoGeneral.html"><button class="botao">Jogo General</button></a>
     </div>
     <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
