Implementado primeira parte segundo trabalho

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 <body>
-    <h1>Escolha Seu Jogo!</h1>
     <div id="botoes">
+        <p class="line typing-animation">Escolha seu Jogo!</p>
         <a href="pagina1.html"><button class="botao">Jogo de Azar</button></a>
         <a href="jogoGeneral.html"><button class="botao">Jogo General</button></a>
     </div>
